2012-06-02 05:59  Shiki.Okasaka@gmail.com

	* Makefile.am, Makefile.in, aclocal.m4, configure, configure.ac,
	  cplusplus/Makefile.in, java/Makefile.in, jsapi/Makefile.in,
	  ltmain.sh, npapi/Makefile.in, npapi/sample/Makefile.in,
	  src/cplusplus.cpp, src/cxx.cpp, src/driver.cpp, src/java.cpp,
	  src/messenger.cpp, src/skeleton.cpp, src/template.cpp,
	  testsuite/Makefile.in, testsuite/runtime/Makefile.in,
	  v8api/Makefile.in: (esidl) : Display the package version rather
	  than the SVN revision number.

2012-04-27 01:24  Shiki.Okasaka@gmail.com

	* configure, src/parser.yy: (esidl) : Allow 'unsigned byte' type.

2012-04-06 09:47  Shiki.Okasaka@gmail.com

	* include/esidl.h, include/messengerDispatch.h,
	  include/messengerInvoke.h, include/messengerMeta.h,
	  jsapi/include/Reflect.h, jsapi/include/esjsapi.h,
	  jsapi/src/bridge.cpp, jsapi/test/EventImp.h,
	  jsapi/test/bridge.test.cpp, jsapi/test/test.idl, src/esidl.cpp,
	  src/messenger.cpp, v8api/include/Reflect.h,
	  v8api/include/esv8api.h, v8api/src/bridge.cpp,
	  v8api/test/EventImp.h, v8api/test/bridge.test.cpp,
	  v8api/test/test.idl: (esidl) : Adding support for the Web IDL
	  static operations (so far for the C++11 binding and JSAPI and V8
	  bridges).

2012-04-02 04:54  Shiki.Okasaka@gmail.com

	* v8api/include/esv8api.h, v8api/src/bridge.cpp: (NativeClass) :
	  Fix bugs.

2012-04-01 04:35  Shiki.Okasaka@gmail.com

	* configure, jsapi/Makefile.am, jsapi/Makefile.in,
	  npapi/Makefile.am, npapi/Makefile.in, v8api/Makefile.am,
	  v8api/Makefile.in: (Makefile.am) : Clean up.

2012-03-31 09:57  Shiki.Okasaka@gmail.com

	* Makefile.am, Makefile.in, configure, configure.ac,
	  v8api/Makefile.am, v8api/Makefile.in, v8api/include/esv8api.h,
	  v8api/src/bridge.cpp, v8api/test/DOMStringMapImp.h,
	  v8api/test/EventImp.h, v8api/test/EventTargetImp.h,
	  v8api/test/HTMLCollectionImp.h, v8api/test/bridge.test.cpp:
	  (v8api) : Initial check in of the V8 API bridge for the C++11
	  binding.
