@@ -1,3 +1,7 @@
+2012-06-02 10:35  Shiki.Okasaka@gmail.com
+
+	* ChangeLog, Makefile.in: (ChangeLog) : New generated by svn2cl.
+
 2012-06-02 05:59  Shiki.Okasaka@gmail.com
 
 	* Makefile.am, Makefile.in, aclocal.m4, configure, configure.ac,
